--- a/app.css
+++ b/app.css
@@ -9,6 +9,17 @@ body {
     font-family: Arial, sans-serif;
     color: #cacaca;
     line-height: 1.6;
+    overflow-x: hidden;
+}
+
+/* Fractal Canvas Background */
+#fractal-canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
 /* Sidebar */
@@ -18,20 +29,41 @@ body {
     left: 0;
     width: 200px;
     height: 100vh;
-    background-color: #333;
+    background-color: rgba(51, 51, 51, 0.95);
     color: #968c8c;
     padding: 20px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.56);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    overflow-y: auto;
+    z-index: 1000;
+    transition: transform 0.3s ease;
 }
+
+/* Mobile Menu Toggle */
+#menu-toggle {
+    display: none;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 1001;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    font-size: 1.5em;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
 #title {
     font-size: 3em;
     margin-bottom: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: left;
 }
+
 #sidebar h2 {
     font-size: 1.5em;
     margin-bottom: 15px;
@@ -40,6 +72,7 @@ body {
 #sidebar ul {
     list-style-type: none;
     padding: 0;
+    width: 100%;
 }
 
 #sidebar ul li {
@@ -55,7 +88,6 @@ body {
 #sidebar ul li a:hover {
     color: #bb7c7c;
     text-decoration: underline;
-    
 }
 
 /* Main Content */
@@ -64,8 +96,6 @@ body {
     padding: 20px;
     width: calc(100% - 220px);
     font-size: 1em;
-    
-
 }
 
 #content h1 {
@@ -90,53 +120,42 @@ footer {
     padding-top: 1000px;
 }
 
+/* Mobile Responsive */
+@media screen and (max-width: 768px) {
+    #menu-toggle {
+        display: block;
+    }
 
-body  {
-    background-image: url(back.jpg);
-  background-size:cover;
-        -webkit-animation: slidein 120s;
-        animation: slidein 120s;
+    #sidebar {
+        transform: translateX(-100%);
+        width: 250px;
+    }
 
-        -webkit-animation-fill-mode: forwards;
-        animation-fill-mode: forwards;
+    #sidebar.active {
+        transform: translateX(0);
+    }
 
-        -webkit-animation-iteration-count: infinite;
-        animation-iteration-count: infinite;
+    #content {
+        margin-left: 0;
+        width: 100%;
+        padding: 80px 20px 20px 20px;
+    }
 
-        -webkit-animation-direction: alternate;
-        animation-direction: alternate;              
+    #content p {
+        font-size: 1.2em;
+    }
+
+    #title {
+        font-size: 2em;
+    }
 }
 
-@-webkit-keyframes slidein {
-from {background-position: top; background-size:3000px; }
-to {background-position: -100px 0px;background-size:2750px;}
-}
+@media screen and (max-width: 480px) {
+    #content p {
+        font-size: 1em;
+    }
 
-@keyframes slidein {
-from {background-position: top;background-size:3000px; }
-to {background-position: -100px 0px;background-size:2750px;}
-
-}
-
-
-
-.center
-{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(75, 75, 250, 0.3);
-  border-radius: 3px;
-}
-.center h1{
-  text-align:center;
-  color:white;
-  font-family: 'Source Code Pro', monospace;
-  text-transform:uppercase;
+    #sidebar {
+        width: 80%;
+    }
 }
